2025.3 add musical key hints