@@ -44,7 +44,7 @@ public class OptionsPanel extends JPanel {
     private int labelWidth = 80;
     private Vector<String> panelProps = new Vector<>();
     private JPanel contentPanel = null;
-    private static final List<String> RESET_CONTEXT_MENU_OPTIONS = Arrays.asList("options_tags_compatibility");
+    private static final List<String> RESET_CONTEXT_MENU_OPTIONS = List.of("options_tags_compatibility");
     private static YassActions actions = null;
 
 
